--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         
         <div class="header_bann">
             <img classs="logo"src="img/Captura de pantalla 2023-03-30 192023.png" alt="">
-            <img  src="iconos img/llamada.png" alt=""> <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola!!%20quiesiera%20mas%20informacion%20de%20la%20fabricaciond%20de%20ventanas" class="contactos_bann"> 9 43564555</a>  
-            <a href="#" class="contactos_bann">Correo@gmail.com</a> <img src="iconos img/correo-electronico.png" alt="">
+            <img  src="iconos/linea-directa.png" alt=""> <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola!!%20quiesiera%20mas%20informacion%20de%20la%20fabricaciond%20de%20ventanas" class="contactos_bann"> 9 43564555</a>  
+            <a href="#" class="contactos_bann">Correo@gmail.com</a> <img src="iconos/gmail.png" alt="">
         </div> 
+        <nav class="menu">
+            <a href="#nosotros1" class="menu__item">Sobre Mi</a>
+            <a href="galeria.html" class="menu__item">Mis Proyectos</a>
+            <a href="#contactos" class="menu__item">Contacto</a>
+        </nav>
         <div class="header">
             <div class="header__fondo" id="fondo">
                 <h1 class="header__titulo">Portafolio</h1>
             </div>
         </div>
-        <nav class="menu">
-            <a href="#nosotros1" class="menu__item">Nosotros</a>
-            <a href="galeria.html" class="menu__item">Mis Proyectos</a>
-            <a href="#contactos" class="menu__item">Contacto</a>
-        </nav>
         <main class="container">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
@@ -64,46 +64,46 @@
                 <div class="row justify-content-center">
                     <article class="col-4 col-lg-2 py-1">
                         <figure class="producto">
-                            <img src="img/ventanas/297113130_1198884354014231_8226870935878570125_n.jpg"
+                            <img src="img/1200px-SITIO-EN-CONSTRUCCION.jpg"
                                 class="img-fluid">
                             <figcaption class="overlay">
-                                <p class="overlay-texto">Ventana aluminio & PVC</p>
+                                <p class="overlay-texto">Juego la culebra</p>
                             </figcaption>
                         </figure>
                     </article>
                     <article class="col-4 col-lg-2 py-1">
                         <figure class="producto">
-                            <img src="img/ventanas/297418635_472546187661663_4850832774005676760_n.jpg"
+                            <img src="img/1200px-SITIO-EN-CONSTRUCCION.jpg"
                                 class="img-fluid">
                                 <figcaption class="overlay">
-                                    <p class="overlay-texto">Shower Door</p>
+                                    <p class="overlay-texto">Pagina Web Electricidad</p>
                                 </figcaption>
                         </figure>
                     </article>
                     <article class="col-4 col-lg-2 py-1">
                         <figure class="producto">
-                            <img src="img/ventanas/297113130_1198884354014231_8226870935878570125_n.jpg"
+                            <img src="img/1200px-SITIO-EN-CONSTRUCCION.jpg"
                                 class="img-fluid">
                                 <figcaption class="overlay">
-                                    <p class="overlay-texto">Vitrinas</p>
+                                    <p class="overlay-texto">Pagina Web Vidrieria</p>
                                 </figcaption>
                         </figure>
                     </article>
                     <article class="col-4 col-lg-2 py-1">
                         <figure class="producto">
-                            <img src="img/ventanas/298734363_594980908672019_9202559192583188294_n.jpg"
+                            <img src="img/1200px-SITIO-EN-CONSTRUCCION.jpg"
                                 class="img-fluid">
                                 <figcaption class="overlay">
-                                    <p class="overlay-texto">Termopaneles</p>
+                                    <p class="overlay-texto">Envio de texto automatico</p>
                                 </figcaption>
                             </figure>
                     </article>
                     <article class="col-4 col-lg-2 py-1">
                         <figure class="producto">
-                            <img src="img/ventanas/297113130_1198884354014231_8226870935878570125_n.jpg"
+                            <img src="img/1200px-SITIO-EN-CONSTRUCCION.jpg"
                                 class="img-fluid">
                                 <figcaption class="overlay">
-                                    <p class="overlay-texto">Puertas Aluminio</p>
+                                    <p class="overlay-texto">Pagina Tipo Blog</p>
                                 </figcaption>
                             </figure>
                         </article>
@@ -119,10 +119,10 @@
             <div id="nosotros1" class="row acerca-de justify-content-around">
                 <article class="col-10 col-sm-5">
                     <figure class="text-center">
-                        <img class="nos_iconos" src="iconos img/team-building.png" alt="">
+                        <img class="nos_iconos" src="img/a6de6d0440602b07f7698cdbe000464e.jpg" alt="">
                         <figcaption>
                             <p>
-                                <strong class="mb-2 d-block">Un equipo de expertos</strong>
+                                <strong class="mb-2 d-block">Quien soy</strong>
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus asperiores illo
                                 tempore quia quos autem et molestias, optio rem dolorum.
                             </p>
@@ -131,10 +131,10 @@
                 </article>
                 <article class="col-10 col-sm-5">
                     <figure class="text-center">
-                        <img class="nos_iconos" src="iconos img/public-service.png" alt="">
+                        <img class="nos_iconos" src="img/a6de6d0440602b07f7698cdbe000464e.jpg" alt="">
                         <figcaption>
                             <p>
-                                <strong class="mb-2 d-block">Una historia de servicio</strong>
+                                <strong class="mb-2 d-block">Mas de mi...</strong>
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus asperiores illo
                                 tempore quia quos autem et molestias, optio rem dolorum.
                             </p>
@@ -161,7 +161,7 @@
         <div class="container-fluid">
             <section class="contacto row justify-content-center">
                 <div class="col-12 col-md-4 text-center">
-                    <h2 id="contactos" class="subtitulo"><span class="subtitulo__texto">Contacto!</span></h2>
+                    <h2 id="contactos"class="nosotros__enlace"  class="subtitulo"><span class="subtitulo__texto">Contacto!</span></h2>
                     <div>
                         <form action="">
                             <div class="mb-1">
@@ -203,10 +203,10 @@
         <footer class="footer">
             <div class="col-auto">
                 <a href="#">
-                    <img src="iconos img/facebook.png" >
+                    <img src="iconos/facebook.png" >
                 </a>
                 <a href="#">
-                    <img src="iconos img/instagram.png" alt="">
+                    <img src="iconos/instagram.png" alt="">
                 </a>
             </div>
         </footer>
