--- a/index.html
+++ b/index.html
@@ -44,36 +44,37 @@
                     <p class="nosotros__texto">
                         Hola, mi nombre es Jeremy y tengo 22 años. Soy un ingeniero informático apasionado por la tecnología y su capacidad para transformar la sociedad. 
                         Desde mi adolescencia, cuando estudié electricidad en la enseñanza media, supe que quería dedicarme a la informática.
+                        
+                    </p>
+                    <p class="nosotros__texto">
                         He desarrollado habilidades en diferentes áreas de la informática, como JavaScript, HTML, CSS, Java, PHP, MySQL, C# y .NET, lo que me ha permitido abordar diferentes desafíos en este campo. 
                         Además, gracias a mi capacidad de aprendizaje continuo y mi interés por estar al día en las últimas tendencias, 
                         he logrado especializarme en áreas como la programación web, el desarrollo de aplicaciones móviles y la administración de bases de datos.
-                        Siempre me he enfocado en la excelencia en cada tarea que realizo. Mi compromiso y dedicación me han permitido obtener logros significativos en cada proyecto en el que he participado. 
-                        Además, mi actitud proactiva y mi capacidad de trabajar en equipo me han permitido ser un activo valioso para las empresas en las que he trabajado, 
-                        contribuyendo al éxito de cada iniciativa en la que me he involucrado.
-                        Además de mis habilidades técnicas, poseo excelentes aptitudes blandas, como la capacidad de comunicarme de manera clara y efectiva, escuchar y entender las necesidades de los clientes y colaboradores, 
-                        y adaptarme a los cambios y desafíos que se presenten en el camino. Estas habilidades me convierten en un candidato ideal para cualquier proyecto o equipo de trabajo en el que esté involucrado.
-                        En resumen, soy un ingeniero informático altamente capacitado, comprometido con la excelencia y con una amplia gama de habilidades técnicas y blandas que me convierten en un trabajador destacado en mi campo. 
-                        Mi pasión por la tecnología y mi capacidad de adaptación me hacen un candidato ideal para cualquier empresa o proyecto en el que desee participar.
                     </p>
                     <a href="#contactos" class="nosotros__enlace">CONTACTO!!</a>
                 </div>
             </div>
         </div>
         <div class="productos">
-            <article class="col-12 text-center">
-                <h2 class="subtitulo">
-                    <class="subtitulo__texto"> !Mis Proyectos!
-                </h2>
-                <p class="productos__titulo">!Mis Proyectos!</p>
-                <p>
-                    En mi portafolio, podrás encontrar una selección de proyectos que he llevado a cabo como programador y diseñador web. 
-                    Estos proyectos están diseñados para mostrar mis habilidades en diferentes áreas de la informática, así como para demostrar mi capacidad para abordar una variedad de desafíos y proyectos.
-                    Entre mis proyectos, podrás encontrar desde páginas web estáticas hasta aplicaciones web interactivas, aplicaciones móviles y sistemas de gestión de bases de datos. 
-                    Cada uno de estos proyectos ha sido diseñado para satisfacer las necesidades de un cliente específico y ha sido desarrollado teniendo en cuenta las mejores prácticas y las últimas tendencias en tecnología.
-                    Además, cada proyecto en mi portafolio viene acompañado de una descripción detallada de los objetivos del proyecto, las herramientas utilizadas, los desafíos superados y los resultados alcanzados. 
-                    De esta manera, podrás obtener una idea clara de mi enfoque de trabajo, mi capacidad para resolver problemas y mi compromiso con la excelencia en cada proyecto en el que me involucro.
-                </p>
-            </article>
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="subtitulo">
+                        <class="subtitulo__texto"> !Mis Proyectos!
+                    </h2>
+                        <p class="productos__titulo">!Mis Proyectos!
+                        </p>
+                            <p class="Proyect_texto">
+                                En mi portafolio, podrás encontrar una selección de proyectos que he llevado a cabo como programador y diseñador web. Estos proyectos están diseñados 
+                                para mostrar mis habilidades en diferentes áreas de la informática, así como para demostrar mi capacidad para abordar una variedad de desafíos y proyectos.
+                            </p>
+                            <p class="Proyect_texto">
+                                Entre mis proyectos, podrás encontrar desde páginas web estáticas hasta aplicaciones web interactivas, aplicaciones móviles y sistemas de gestión de bases de datos. Cada uno de estos proyectos ha 
+                                sido diseñado para satisfacer las necesidades de un cliente específico y ha sido desarrollado teniendo en cuenta las mejores prácticas y las últimas tendencias en tecnología. Además, cada proyecto en mi 
+                                portafolio viene acompañado de una descripción detallada de los objetivos del proyecto, las herramientas utilizadas, los desafíos superados y los resultados alcanzados. 
+                                De esta manera, podrás obtener una idea clara de mi enfoque de trabajo, mi capacidad para resolver problemas y mi compromiso con la excelencia en cada proyecto en el que me involucro.
+                            </p>
+                </div>
+            </div>
             <div id="galeria" class="col-12" >
                 <div class="row justify-content-center">
                     <article class="col-4 col-lg-2 py-1">
@@ -144,8 +145,7 @@
                         <figcaption>
                             <p>
                                 <strong class="mb-2 d-block">Quien soy</strong>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus asperiores illo
-                                tempore quia quos autem et molestias, optio rem dolorum.
+                                soy un ingeniero informático altamente capacitado, comprometido con la excelencia y con una amplia gama de habilidades técnicas y blandas que me convierten en un trabajador destacado en mi campo.
                             </p>
                         </figcaption>
                     </figure>
@@ -156,8 +156,12 @@
                         <figcaption>
                             <p>
                                 <strong class="mb-2 d-block">Mas de mi...</strong>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus asperiores illo
-                                tempore quia quos autem et molestias, optio rem dolorum.
+                                Siempre me he enfocado en la excelencia en cada tarea que realizo. Mi compromiso y dedicación me han permitido obtener logros significativos en cada proyecto en el que he participado. 
+                                Además, mi actitud proactiva y mi capacidad de trabajar en equipo me han permitido ser un activo valioso para las empresas en las que he trabajado, 
+                                contribuyendo al éxito de cada iniciativa en la que me he involucrado.
+                                Además de mis habilidades técnicas, poseo excelentes aptitudes blandas, como la capacidad de comunicarme de manera clara y efectiva, escuchar y entender las necesidades de los clientes y colaboradores, 
+                                y adaptarme a los cambios y desafíos que se presenten en el camino. Estas habilidades me convierten en un candidato ideal para cualquier proyecto o equipo de trabajo en el que esté involucrado 
+                                Mi pasión por la tecnología y mi capacidad de adaptación me hacen un candidato ideal para cualquier empresa o proyecto en el que desee participar.
                             </p>
                         </figcaption>
                         
