--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/whatsapp.css">
     <script src="index.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,7 @@
     <title>Portafolio</title>
 </head>
 <body data-bs-theme="light">
-    <div class="contenedor"> 
+    <div class="contenedor" data-bs-theme="light"> 
         <div class="header_bann">
             <a href="index.html">
             <img class="logo logo-grande" src="img/pantera nuevo logo.png"  alt=""> 
@@ -28,7 +29,7 @@
                     Inicio de sesion
                 </a>
         </div>
-        <div class="contactos">
+        <div class="contactos" data-bs-theme="dark">
             <a href="https://api.whatsapp.com/send?phone=+56961342677&text=Hola!!%20Te%20estamos%20buscando%20para%20trabajar%20de%20programador" class="contactos_bann">
                 <img  src="iconos/linea-directa.png" alt=""> 
                 +569 61342677
@@ -234,13 +235,13 @@
                         </form>
                     </div>
                 </div>
-                <div class="w-100 mb-4"></div>
-                <div>
-                    <p>
-                        <img src="" alt="">Tel: 9 43564555
-                    </p>
-                </div>
+                
             </section>
+            <div>
+                <a>
+                    <img src="" alt="">Tel: 9 43564555
+                </a>
+            </div>
         </div>
         <footer class="footer">
             <div class="col-auto">
@@ -260,6 +261,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <a href="https://api.whatsapp.com/send?phone=+56961342677&text=Hola!!%20Te%20estamos%20buscando%20para%20trabajar%20de%20programador" class="float" target="_blank">
 <i class="fa fa-whatsapp my-float"></i>
+
+
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </body>
 
 </html>
