--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <section class="contacto row justify-content-center">
                 <div class="col-12 col-md-4 text-center">
                     <h2 id="contactos"class="nosotros__enlace"  class="subtitulo"><span class="subtitulo__texto">Contacto!</span></h2>
-                    <div>
+                    <div class="form_con">
                         <form action="">
                             <div class="mb-1">
                                 <label for="" class="form-label"></label>
