grandes cambios (bann_header)

--- a/index.html
+++ b/index.html
@@ -19,27 +19,29 @@
 <body data-bs-theme="light">
     <div class="contenedor" data-bs-theme="light"> 
         <div class="header_bann">
-            <a href="index.html">
-            <img class="logo logo-grande" src="img/pantera nuevo logo.png"  alt=""> 
-            </a>
+            <div class="lgo_tit">
+                <a href="index.html">
+                    <img class="logo logo_grande" src="img/pantera nuevo logo.png"  alt="">
+                    <h3 class="bann-titulo">Jeremyxxo14</h3>
+                </a>
                 <button onclick="CambiarTema()" class="btn rounded-fill"><i id="dl-icon" class="bi bi-moon-fill"></i></button>
-        <div class="inicio_sesion">
+            <div class="inicio_sesion">
                 <a href="" class="ini_sesion">
                     <img src="iconos/iniciar-sesion.png" alt="">
-                    Inicio de sesion
+                        Inicio de sesion
                 </a>
-        </div>
-        <div class="contactos" data-bs-theme="dark">
-            <a href="https://api.whatsapp.com/send?phone=+56961342677&text=Hola!!%20Te%20estamos%20buscando%20para%20trabajar%20de%20programador" class="contactos_bann">
-                <img  src="iconos/linea-directa.png" alt=""> 
-                +569 61342677
-            </a>  
-            <a href="mailto:jeremyxxo@gmail.com" class="contactos_bann">
-                <img src="iconos/gmail.png" alt="Ícono de Gmail">
-                jeremyxxo@gmail.com
-            </a>
-        </div>
-        
+            </div>
+            <div class="contactos" data-bs-theme="dark">
+                <a href="https://api.whatsapp.com/send?phone=+56961342677&text=Hola!!%20Te%20estamos%20buscando%20para%20trabajar%20de%20programador" class="contactos_bann">
+                    <img  src="iconos/linea-directa.png" alt=""> 
+                    +569 61342677
+                </a>  
+                <a href="mailto:jeremyxxo@gmail.com" class="contactos_bann">
+                    <img src="iconos/gmail.png" alt="Ícono de Gmail">
+                    jeremyxxo@gmail.com
+                </a>
+            </div>
+        </div>    
         </div>
         <nav class="menu">
             <a href="#nosotros1" class="menu__item">Sobre Mi</a>
@@ -48,7 +50,6 @@
         </nav>
         <div class="header">
             <div class="header__fondo" id="fondo">
-                <h1 class="header__titulo">Jeremyxxo14</h1>
             </div>
         </div>
         <div class="container">
@@ -172,8 +173,7 @@
                     </figcaption>
                     </figure>
                 </article>  
-                <br>
-                <br>
+                
                 <article class="col-10 col-sm-8">
                     <figure class="text-center">
                         <div class="nos_sub">
