nuevos estilos agregados

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link rel="icon" type="image/png" href="img/pantera nuevo logo.png">
     <title>Portafolio</title>
 </head>
-
 <body data-bs-theme="light">
     <div class="contenedor">
         <div id="loader" class="loader" data-bs-theme="dark">
@@ -29,8 +28,8 @@
         <div class="header_bann">
             <div class="flex_ban">
                 <div class="lgo_tit">
-                    <a style="text-decoration: none;" href="index.html">
-                        <img class="logo logo_grande" src="img/pantera nuevo logo.png" alt="">
+                    <a style="text-decoration: none;" href="index.html" data-bs-theme="dark">
+                        <img class="logo logo_grande " src="img/Pantera blanca.png" alt="">
                     </a>
                     <a style="text-decoration: none;" href="index.html">
                         <h3 class="bann-titulo">Jeremyxxo</h3>
@@ -62,13 +61,13 @@
                     <div class="collapse navbar-collapse " id="navbarNav" data-bs-theme="light">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#Proyectos1">Mis Proyectos</a>
+                                <a class="nav-link-item" href="#Proyectos1">Mis Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#nosotros1">Sobre Mi</a>
+                                <a class="nav-link-item" href="#nosotros1">Sobre Mi</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contactos">Contactos</a>
+                                <a class="nav-link-item" href="#contactos">Contactos</a>
                             </li>
                             <li class="nav-item">
                                 <button onclick="CambiarTema()" class="btn rounded-fill"><i id="tema-btn" class="bi bi-moon-fill"></i></button>
