nuevo(boton de subida)

--- a/index.html
+++ b/index.html
@@ -308,6 +308,12 @@
         </footer>
     </div>
 
+    <div class="scroll-to-top-container">
+        <button id="btn-to-top" class="btn-to-top">
+        <i class="bi bi-arrow-up"></i>
+        </button>
+    </div>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <a href="https://api.whatsapp.com/send?phone=+56961342677&text=Hola!!%20Te%20estamos%20buscando%20para%20trabajar%20de%20programador"
         class="float" target="_blank">
@@ -323,6 +329,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
             integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
             crossorigin="anonymous"></script>
+            
+
+            
 </body>
 
 </html>
