--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="proyect_view">
             <div id="Proyectos1" class="row justify-content-center" style="margin: 35px 0px;">
-                <div class="col-10 text-center">
+                <div class="col-6 text-center">
                     <h2 class="subtitulo">
                         <class="subtitulo__texto"> !Mis Proyectos!
                     </h2>
@@ -123,18 +123,6 @@
                         programador y diseñador web. Estos proyectos están diseñados
                         para mostrar mis habilidades en diferentes áreas de la informática, así como para demostrar mi
                         capacidad para abordar una variedad de desafíos y proyectos.
-                    </p>
-                    <p class="Proyect_texto">
-                        Entre mis proyectos, podrás encontrar desde páginas web estáticas hasta aplicaciones web
-                        interactivas, aplicaciones móviles y sistemas de gestión de bases de datos. Cada uno de estos
-                        proyectos ha
-                        sido diseñado para satisfacer las necesidades de un cliente específico y ha sido desarrollado
-                        teniendo en cuenta las mejores prácticas y las últimas tendencias en tecnología. Además, cada
-                        proyecto en mi
-                        portafolio viene acompañado de una descripción detallada de los objetivos del proyecto, las
-                        herramientas utilizadas, los desafíos superados y los resultados alcanzados.
-                        De esta manera, podrás obtener una idea clara de mi enfoque de trabajo, mi capacidad para
-                        resolver problemas y mi compromiso con la excelencia en cada proyecto en el que me involucro.
                     </p>
                 </div>
             </div>
@@ -183,7 +171,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a href="galeria.html" class="btn-productos" type="button">Proyectos</a>
+                        <a href="proyectos.html" class="btn-productos" type="button">Proyectos</a>
                     </div>
                 </div>
             </div>
