--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/whatsapp.css">
-    <script src="nightmode.js"></script>
+    <script src="/JS/nightmode.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -113,7 +113,7 @@
         </div>
         <div class="proyect_view">
             <div id="Proyectos1" class="row justify-content-center" style="margin: 35px 0px;">
-                <div class="col-6 text-center">
+                <div class="col-8 text-center">
                     <h2 class="subtitulo">
                         <class="subtitulo__texto"> !Mis Proyectos!
                     </h2>
