--- a/proyectos.html
+++ b/proyectos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/proyectos.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/whatsapp.css">
-    <script src="nightmode.js"></script>
+    <script src="/JS/nightmodep.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -56,9 +56,6 @@
                     </button>
                     <div class="collapse navbar-collapse " id="navbarNav" data-bs-theme="light">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link-item" href="#contactos">Contactos</a>
-                            </li>
                             <li class="nav-item">
                                 <button onclick="CambiarTema()" class="btn rounded-fill"><i id="tema-btn" class="bi bi-moon-fill"></i></button>
                             </li>
