--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
                         </figcaption>
                     </figure>
                 </article>
-                <div class="row justify-content-center" style="margin: 40px 0px;">
-                    <div class="col-4 col-lg-3 py-1">
-                        <img src="img/20220814_175635.jpg" alt="image 1" class="img-fluid">
+                <div class="row justify-content-center mimg" style="margin: 40px 0px;">
+                    <div class="col-4 col-lg-3 py-5">
+                        <img src="img/una-taza-de-javascript.png" alt="image 1" class="img-fluid">
                     </div>
                     <div class="col-4 col-lg-3 py-1">
-                        <img src="img/20220814_175618.jpg" alt="image 2" class="img-fluid">
+                        <img src="img/reactjs-facebook-javascript-minimalism-wallpaper-preview.jpg" alt="image 2" class="img-fluid">
                     </div>
-                    <div class="col-4 col-lg-3 py-1">
-                        <img src="img/20220814_172958.jpg" alt="image 3" class="img-fluid">
+                    <div class="col-4 col-lg-3 py-5">
+                        <img src="img/jxTy516zdI0iE.png" alt="image 3" class="img-fluid">
                     </div>
                 </div>
             </div>
