--- a/proyectos.html
+++ b/proyectos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/proyectos.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/whatsapp.css">
-    <script src="/JS/nightmodep.js"></script>
+    <script src="js/nightmodep.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -91,11 +91,11 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Juego la culebra</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
-                            <p class="title">BACK</p>
+                            <p class="title">Descripción</p>
                             <div class="card-bottom">
                                 <a href="#" class="btn-card" type="button">Visitar Pagina</a>
                             </div>
@@ -107,11 +107,11 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Web Electricidad</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
-                            <p class="title">BACK</p>
+                            <p class="title">Descripción</p>
                             <div class="card-bottom">
                                 <a href="#" class="btn-card" type="button">Visitar Pagina</a>
                             </div>
@@ -123,11 +123,11 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Envio de texto automatico</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
-                            <p class="title">BACK</p>
+                            <p class="title">Descripción</p>
                             <div class="card-bottom">
                                 <a href="#" class="btn-card" type="button">Visitar Pagina</a>
                             </div>
@@ -139,11 +139,11 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
-                            <p class="title">BACK</p>
+                            <p class="title">Descripción</p>
                             <div class="card-bottom">
                                 <a href="#" class="btn-card" type="button">Visitar Pagina</a>
                             </div>
@@ -155,11 +155,11 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
-                            <p class="title">BACK</p>
+                            <p class="title">Descripción</p>
                             <div class="card-bottom">
                                 <a href="#" class="btn-card" type="button">Visitar Pagina</a>
                             </div>
@@ -171,11 +171,11 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
-                            <p class="title">BACK</p>
+                            <p class="title">Descripción</p>
                             <div class="card-bottom">
                                 <a href="#" class="btn-card" type="button">Visitar Pagina</a>
                             </div>
@@ -187,11 +187,11 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
-                            <p class="title">BACK</p>
+                            <p class="title">Descripción</p>
                             <div class="card-bottom">
                                 <a href="#" class="btn-card" type="button">Visitar Pagina</a>
                             </div>
@@ -203,11 +203,11 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
-                            <p class="title">BACK</p>
+                            <p class="title">Descripción</p>
                             <div class="card-bottom">
                                 <a href="#" class="btn-card" type="button">Visitar Pagina</a>
                             </div>
