--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a href="proyectos.html" class="btn-productos" type="button">Proyectos</a>
+                        <a href="../Portafolio/html/proyectos.html" class="btn-productos" type="button">Proyectos</a>
                     </div>
                 </div>
             </div>
