--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/proyectos.css">
-    <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/whatsapp.css">
-    <script src="js/nightmodep.js"></script>
+    <link rel="stylesheet" href="/Portafolio/css/proyectos.css">
+    <link rel="stylesheet" href="/Portafolio/css/loader.css">
+    <link rel="stylesheet" href="/Portafolio/css/whatsapp.css">
+    <script src="/Portafolio/js/nightmodep.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="img/pantera nuevo logo.png">
+    <link rel="icon" type="image/png" href="/Portafolio/img/pantera nuevo logo.png">
     <title>Proyectos</title>
 </head>
 <body data-bs-theme="light">
@@ -24,8 +24,8 @@
         <div class="header_bann">
             <div class="flex_ban">
                 <div class="lgo_tit">
-                    <a style="text-decoration: none;" href="index.html" data-bs-theme="dark">
-                        <img class="logo logo_grande " src="img/Pantera blanca.png" alt="">
+                    <a style="text-decoration: none;" href="/Portafolio/index.html" data-bs-theme="dark">
+                        <img class="logo logo_grande " src="/Portafolio/img/Pantera blanca.png" alt="">
                     </a>
                     <a style="text-decoration: none;" href="index.html">
                         <h3 class="bann-titulo">Jeremyxxo</h3>
@@ -34,11 +34,11 @@
                 <div class="contactos desktop" data-bs-theme="dark">
                     <a href="https://api.whatsapp.com/send?phone=+56961342677&text=Hola!!%20Te%20estamos%20buscando%20para%20trabajar%20de%20programador"
                         class="contactos_bann">
-                        <img src="iconos/linea-directa.png" alt="">
+                        <img src="/Portafolio/iconos/linea-directa.png" alt="">
                         +569 61342677
                     </a>
                     <a href="mailto:jeremyxxo@gmail.com" class="contactos_bann">
-                        <img src="iconos/gmail.png" alt="Ícono de Gmail">
+                        <img src="/Portafolio/iconos/gmail.png" alt="Ícono de Gmail">
                         jeremyxxo@gmail.com
                     </a>
                 </div>
@@ -91,7 +91,7 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Juego la culebra</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="/Portafolio/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
@@ -107,7 +107,7 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Web Electricidad</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="/Portafolio/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
@@ -123,7 +123,7 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Envio de texto automatico</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="/Portafolio/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
@@ -139,7 +139,7 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="/Portafolio/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
@@ -155,7 +155,7 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="/Portafolio/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
@@ -171,7 +171,7 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="/Portafolio/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
@@ -187,7 +187,7 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="/Portafolio/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
@@ -203,7 +203,7 @@
                             <div class="flip-card-front" data-bs-theme="light">
                                 <p class="title-front">Pagina Tipo Blog</p>
                                 <div class="card-imagen">
-                                    <img class="img-card" src="img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
+                                    <img class="img-card" src="/Portafolio/img/1200px-SITIO-EN-CONSTRUCCION.jpg" alt="">
                                 </div>
                             </div>
                         <div class="flip-card-back" data-bs-theme="light">
@@ -220,13 +220,13 @@
         <footer class="footer">
             <div class="col-auto">
                 <a href="#">
-                    <img src="iconos/facebook.png" alt="">
+                    <img src="/Portafolio/iconos/facebook.png" alt="">
                 </a>
                 <a href="#">
-                    <img src="iconos/instagram.png" alt="">
+                    <img src="/Portafolio/iconos/instagram.png" alt="">
                 </a>
                 <a href="#">
-                    <img src="iconos/github.png" alt="">
+                    <img src="/Portafolio/iconos/github.png" alt="">
                 </a>
             </div>
         </footer>
