inicio de sesion

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                 </div>
                 <div class="inicio_sesion desktop">
-                    <a href="" class="ini_sesion">
+                    <a href="/Portafolio/html/login.html" class="ini_sesion">
                         Inicio de sesion
                     </a>
                     <button onclick="CambiarTema()" class="btn rounded-fill"><i id="dl-icon"
@@ -58,6 +58,9 @@
                     <div class="collapse navbar-collapse " id="navbarNav" data-bs-theme="light">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
+                                <a class="nav-link-item" href="/Portafolio/html/login.html">inicio de sesion</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link-item" href="#Proyectos1">Mis Proyectos</a>
                             </li>
                             <li class="nav-item">
