inicio de sesion(Ajustes)

--- a/html/login.html
+++ b/html/login.html
@@ -73,17 +73,18 @@
                             </div>
                             <div class="user-box">
                                 <input required="" name="" type="password">
-                                <label>Password</label>
+                                <label>Contraseña</label>
+                                <a href="" class="b2">Olvidaste tu contraseña?</a>
                             </div>
                             <a href="#">
                                 <span></span>
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                Submit
+                                Enviar
                             </a>
                         </form>
-                        <p>Don't have an account? <a href="" class="a2">Sign up!</a></p>
+                        <p>No Tienes una Cuenta? <a href="" class="a2">Registrate!</a></p>
                     </div>
                 </div>
             </div>  
