--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Portafolio/css/Ini_sesion.css">
+    <link rel="stylesheet" href="/Portafolio/css/registro.css">
     <link rel="stylesheet" href="/Portafolio/css/loader.css">
     <link rel="stylesheet" href="/Portafolio/css/whatsapp.css">
     <script src="/Portafolio/js/nightmodep.js"></script>
@@ -17,10 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/Portafolio/img/pantera nuevo logo.png">
-    <title>Proyectos</title>
+    <title>Proyectos2</title>
 </head>
 <body data-bs-theme="light">
-    <div class="contenedor">  
         <div id="login-container" class="Login-container" >
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10 col-sm-10 text-center">
@@ -39,7 +38,7 @@
                                 <input required="" name="" type="password">
                                 <label>repetir Contraseña</label>
                             </div>
-                            <a href="#" onclick="cargarNuevaPagina();">
+                            <a>
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -47,12 +46,11 @@
                                 Confirmar
                             </a>
                         </form>
-                        <p>Tienes una cuenta? <a href="" class="a2">Ingresa!</a></p>
+                        <p>Tienes una cuenta? <a href="/Portafolio/html/login.html" class="a2">Ingresa!</a></p>
                     </div>
                 </div>
             </div>  
-        </div>
-
+        </div> 
     <div id="loader" class="loader" data-bs-theme="dark">
         <div class="spinner"></div>
         <div class="loader-text">Cargando...</div>
