--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/Portafolio/css/loader.css">
     <link rel="stylesheet" href="/Portafolio/css/whatsapp.css">
     <script src="/Portafolio/js/nightmodep.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
