--- a/html/login.html
+++ b/html/login.html
@@ -25,10 +25,10 @@
         <div class="header_bann">
             <div class="flex_ban">
                 <div class="lgo_tit">
-                    <a style="text-decoration: none;" href="../index.html" data-bs-theme="dark">
+                    <a style="text-decoration: none;" href="/Portafolio/index.html" data-bs-theme="dark">
                         <img class="logo logo_grande " src="/Portafolio/img/Pantera blanca.png" alt="">
                     </a>
-                    <a style="text-decoration: none;" href="index.html">
+                    <a style="text-decoration: none;" href="/Portafolio/index.html">
                         <h3 class="bann-titulo">Jeremyxxo</h3>
                     </a>
                 </div>
