--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -28,7 +28,7 @@
                     <a style="text-decoration: none;" href="/Portafolio/index.html" data-bs-theme="dark">
                         <img class="logo logo_grande " src="/Portafolio/img/Pantera blanca.png" alt="">
                     </a>
-                    <a style="text-decoration: none;" href="index.html">
+                    <a style="text-decoration: none;" href="/Portafolio/index.html">
                         <h3 class="bann-titulo">Jeremyxxo</h3>
                     </a>
                 </div>
